seaqt/QtQml/gen_qjsnumbercoercion.h

class QJSNumberCoercion;
typedef struct QJSNumberCoercion QJSNumberCoercion;
QJSNumberCoercion* QJSNumberCoercion_new(QJSNumberCoercion* from);
bool QJSNumberCoercion_isInteger(double d);
bool QJSNumberCoercion_isArrayIndex_double(double d);
bool QJSNumberCoercion_isArrayIndex_qint64(long long i);
bool QJSNumberCoercion_isArrayIndex_quint64(unsigned long long i);
int QJSNumberCoercion_toInteger(double d);
bool QJSNumberCoercion_equals(double lhs, double rhs);
double QJSNumberCoercion_roundTowards0(double d);